feat(structure) structural fix